<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_edit_txt_rounded"
    tools:context=".MenuActivity">


    <Button
        android:id="@+id/btnSearch"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_btn_rounded"
        android:fontFamily="casual"
        android:text="@string/scan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMyPets"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_btn_rounded"
        android:fontFamily="casual"
        android:text="@string/myPets"
        app:layout_constraintEnd_toEndOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="@+id/btnSearch"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

    <Button
        android:id="@+id/btnLostAnim"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_btn_rounded"
        android:fontFamily="casual"
        android:text="@string/lostAnimals"
        app:layout_constraintEnd_toEndOf="@+id/btnMyPets"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/btnMyPets"
        app:layout_constraintTop_toBottomOf="@+id/btnMyPets" />

</androidx.constraintlayout.widget.ConstraintLayout>